--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="body">
     <header>
 
         <nav>
@@ -110,6 +111,78 @@
                 </ul>
         </section>
     </main>
+
+    <section>
+        <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img 
+                    src="images/banking-app.jpg" 
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                    >
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+
+                <li>
+                    <img 
+                    src="images/cashless-payment.jpg" 
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                    >
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img 
+                    src="images/meditation-app.jpg" 
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                    >
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+
+                <li>
+                    <img 
+                    src="images/taxi-service.jpg" 
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                    >
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img 
+                    src="images/screen-illustrations.jpg" 
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                    >
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+
+                <li>
+                    <img 
+                    src="images/online-courses.jpg" 
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                    >
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+    </section>
+
     <footer>
         <a href="./index.html" id="logo">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
