--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body class="body">
-    <header>
+    <header class="header">
 
         <nav>
             <a href="./index.html">WebStudio</a>
 
-            <ul>
+            <ul class="top-line">
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
             <address>
-            <ul>
+            <ul class="top-line-contacts">
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
@@ -34,10 +34,10 @@
     </header>
 
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
+        <section class="main">
+            <h1 class="main-headline">Effective Solutions for Your Business</h1>
 
-            <button type="button">Order Service</button>
+            <button type="button" class="main-button">Order Service</button>
         </section>
         <section>
             <h2 hidden>whatever</h2>
@@ -65,7 +65,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="our-team">
             <h2>Our Team</h2>
                 <ul>
                     <li>
