--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-            <address>
-            <ul class="top-line-contacts">
+            <address class="top-line-contacts">
+            <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
