--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body class="body">
+
     <header class="header">
 
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html">WebStudio<span class="header-text"></span>
+            </a>
 
             <ul class="top-line">
                 <li><a href="">Studio</a></li>
@@ -34,11 +37,14 @@
     </header>
 
     <main>
+        <!-- Section one -->
         <section class="main">
             <h1 class="main-headline">Effective Solutions for Your Business</h1>
 
             <button type="button" class="main-button">Order Service</button>
         </section>
+
+        <!-- Section two -->
         <section>
             <h2 hidden>whatever</h2>
             <ul>
@@ -65,6 +71,8 @@
                 </li>
             </ul>
         </section>
+
+        <!-- Section three -->
         <section class="our-team">
             <h2>Our Team</h2>
                 <ul>
@@ -115,6 +123,7 @@
         </section>
     </main>
 
+    <!-- Section four -->
     <section>
         <h2>Our Portfolio</h2>
             <ul>
@@ -186,9 +195,11 @@
             </ul>
     </section>
 
-    <footer>
-        <a href="./index.html" id="logo">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="./index.html" id="logo" class="logo">WebStudio<span class="logo-text"></span>
+
+        </a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
