--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
 
         <nav>
-            <a href="./index.html">WebStudio<span class="header-text"></span>
+            <a href="./index.html">WebStudio<span class="header-text">Studio</span>
             </a>
 
             <ul class="top-line">
@@ -196,7 +196,7 @@
     </section>
 
     <footer class="footer">
-        <a href="./index.html" id="logo" class="logo">WebStudio<span class="logo-text"></span>
+        <a href="./index.html" id="logo" class="logo">WebStudio<span class="logo-text">Studio</span>
 
         </a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
