--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body class="body">
 
-    <header class="header">
+    <header>
 
-        <nav>
+        <nav class="header">
             <a href="./index.html">WebStudio<span class="header-text">Studio</span>
             </a>
 
