--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <header>
 
-        <nav class="header">
-            <a href="./index.html">WebStudio<span class="header-text">Studio</span>
+        <nav class="header-nav">
+            <a href="./index.html" class="logo">WebStudio<span class="header-text">Studio</span>
             </a>
 
             <ul class="top-line">
