--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <header>
 
         <nav class="header-nav">
-            <a href="./index.html" class="logo">WebStudio<span class="header-text">Studio</span>
+            <a href="./index.html">WebStudio<span class="header-text">Studio</span>
             </a>
 
-            <ul class="top-line">
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul>
+                <li class="top-line"><a href="">Studio</a></li>
+                <li class="top-line"><a href="">Portfolio</a></li>
+                <li class="top-line"><a href="">Contacts</a></li>
             </ul>
         </nav>
-            <address class="top-line-contacts">
+            <address>
             <ul>
-                <li>
+                <li class="top-line-contacts">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="top-line-contacts">
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
