--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
             <a href="./index.html">WebStudio<span class="header-text">Studio</span>
             </a>
 
-            <ul>
-                <li class="top-line"><a href="">Studio</a></li>
-                <li class="top-line"><a href="">Portfolio</a></li>
-                <li class="top-line"><a href="">Contacts</a></li>
+            <ul class="top-line">
+                <li ><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-            <address>
+            <address class="top-line-contacts">
             <ul>
-                <li class="top-line-contacts">
+                <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="top-line-contacts">
+                <li>
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
