--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header>
 
         <nav class="header-nav">
-            <a href="./index.html">WebStudio<span class="header-text">Studio</span>
+            <a href="./index.html">Web<span class="header-text">Studio</span>
             </a>
 
             <ul class="top-line">
-                <li ><a href="">Studio</a></li>
+                <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
@@ -196,7 +196,7 @@
     </section>
 
     <footer class="footer">
-        <a href="./index.html" id="logo" class="logo">WebStudio<span class="logo-text">Studio</span>
+        <a href="./index.html" id="logo" class="logo">Web<span class="logo-text">Studio</span>
 
         </a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
