--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Section two -->
         <section>
             <h2 hidden>whatever</h2>
-            <ul>
+            <ul class="description">
                 <li>
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
