--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <!-- Section four -->
     <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="our-team">Our Portfolio</h2>
             <ul>
                 <li>
                     <img 
