--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                         width="264"
                         height="260" />
 
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
+                        <h3 class="card-name">Mark Guerrero</h3>
+                        <p class="card-outline">Product Designer</p>
                     </li>
 
                     <li>
@@ -95,8 +95,8 @@
                         width="264"
                         height="260" />
 
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
+                        <h3 class="card-name">Tom Ford</h3>
+                        <p class="card-outline">Frontend Developer</p>
                     </li>
 
                     <li>
@@ -106,8 +106,8 @@
                         width="264"
                         height="260" />
 
-                        <h3>Camila Garcia</h3>
-                        <p>Marketing</p>
+                        <h3 class="card-name">Camila Garcia</h3>
+                        <p class="card-outline">Marketing</p>
                     </li>
 
                     <li>
@@ -117,8 +117,8 @@
                         width="264"
                         height="260" />
 
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
+                        <h3 class="card-name">Daniel Wilson</h3>
+                        <p class="card-outline">UI Designer</p>
                     </li>
                 </ul>
         </section>
@@ -126,7 +126,7 @@
 
     <!-- Section four -->
     <section>
-        <h2 class="our-team">Our Portfolio</h2>
+        <h2 class="our-portfolio">Our Portfolio</h2>
             <ul>
                 <li>
                     <img 
