--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </section>
 
         <!-- Section three -->
-        <section class="our-team">
-            <h2>Our Team</h2>
+        <section>
+            <h2 class="our-team">Our Team</h2>
                 <ul>
                     <li>
                         <img 
