--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <header>
 
         <nav class="header-nav">
-            <a href="./index.html" id="logo" class="logo">Web<span class="header-text">Studio</span>
+            <a href="./index.html" id="logo" class="header-menu-link">Web<span class="header-text">Studio</span>
 
             </a>
 
-            <ul class="top-line">
+            <ul class="header-list">
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-            <address class="top-line-contacts">
+            <address class="header-list-contacts">
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -40,7 +40,7 @@
     <main>
         <!-- Section one -->
         <section class="main">
-            <h1 class="main-headline">Effective Solutions for Your Business</h1>
+            <h1 class="main-title">Effective Solutions for Your Business</h1>
 
             <button type="button" class="main-button">Order Service</button>
         </section>
@@ -48,7 +48,7 @@
         <!-- Section two -->
         <section>
             <h2 hidden>whatever</h2>
-            <ul class="description">
+            <ul class="description-list">
                 <li>
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
@@ -75,7 +75,7 @@
 
         <!-- Section three -->
         <section>
-            <h2 class="our-team">Our Team</h2>
+            <h2 class="members-title">Our Team</h2>
                 <ul>
                     <li>
                         <img 
@@ -84,8 +84,8 @@
                         width="264"
                         height="260" />
 
-                        <h3 class="card-name">Mark Guerrero</h3>
-                        <p class="card-outline">Product Designer</p>
+                        <h3 class="card-subtitle">Mark Guerrero</h3>
+                        <p class="card-item">Product Designer</p>
                     </li>
 
                     <li>
@@ -95,8 +95,8 @@
                         width="264"
                         height="260" />
 
-                        <h3 class="card-name">Tom Ford</h3>
-                        <p class="card-outline">Frontend Developer</p>
+                        <h3 class="card-subtitle">Tom Ford</h3>
+                        <p class="card-item">Frontend Developer</p>
                     </li>
 
                     <li>
@@ -106,8 +106,8 @@
                         width="264"
                         height="260" />
 
-                        <h3 class="card-name">Camila Garcia</h3>
-                        <p class="card-outline">Marketing</p>
+                        <h3 class="card-subtitle">Camila Garcia</h3>
+                        <p class="card-item">Marketing</p>
                     </li>
 
                     <li>
@@ -117,8 +117,8 @@
                         width="264"
                         height="260" />
 
-                        <h3 class="card-name">Daniel Wilson</h3>
-                        <p class="card-outline">UI Designer</p>
+                        <h3 class="card-subtitle">Daniel Wilson</h3>
+                        <p class="card-item">UI Designer</p>
                     </li>
                 </ul>
         </section>
@@ -126,7 +126,7 @@
 
     <!-- Section four -->
     <section>
-        <h2 class="our-portfolio">Our Portfolio</h2>
+        <h2 class="portfolio-title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img 
@@ -200,7 +200,7 @@
         <a href="/index.html" id="logo" class="logo">Web<span class="logo-text">Studio</span>
 
         </a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-item">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
