--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </a>
 
             <ul class="header-list">
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li class="header-list-item"><a href="">Studio</a></li>
+                <li class="header-list-item"><a href="">Portfolio</a></li>
+                <li class="header-list-item"><a href="">Contacts</a></li>
             </ul>
         </nav>
             <address class="header-list-contacts">
