--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         </section>
 
         <!-- Section three -->
-        <section>
+        <section class="members">
             <h2 class="members-title">Our Team</h2>
                 <ul>
-                    <li>
+                    <li class="members-item">
                         <img 
                         src="./images/mark.jpg" 
                         alt="Mark Guerrero"
