--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <p class="card-item">Product Designer</p>
                     </li>
 
-                    <li>
+                    <li class="members-item">
                         <img 
                         src="./images/tom.jpg" 
                         alt="Tom Ford"
@@ -99,7 +99,7 @@
                         <p class="card-item">Frontend Developer</p>
                     </li>
 
-                    <li>
+                    <li class="members-item">
                         <img 
                         src="./images/camila.jpg" 
                         alt="Camila Garcia"
@@ -110,7 +110,7 @@
                         <p class="card-item">Marketing</p>
                     </li>
 
-                    <li>
+                    <li class="members-item">
                         <img 
                         src="./images/daniel.jpg" 
                         alt="Daniel Wilson"
