--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 
         <nav class="header-nav">
-            <a href="./index.html" class="header-menu-link">Web<span class="header-text">Studio</span>
+            <a href="./index.html" class="header-list-item">Web<span class="header-text">Studio</span>
 
             </a>
 
@@ -125,7 +125,7 @@
     </main>
 
     <!-- Section four -->
-    <section>
+    <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
             <ul>
                 <li>
