--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <header>
 
         <nav class="header-nav">
-            <a href="./index.html" class="header-list-item">Web<span class="header-text">Studio</span>
+            <a href="./index.html" class="header-menu-link">Web<span class="header-text">Studio</span>
 
             </a>
 
             <ul class="header-list">
-                <li class="header-list-item"><a href="">Studio</a></li>
-                <li class="header-list-item"><a href="">Portfolio</a></li>
-                <li class="header-list-item"><a href="">Contacts</a></li>
+                <li class="header-menu-link"><a href="">Studio</a></li>
+                <li class="header-menu-link"><a href="">Portfolio</a></li>
+                <li class="header-menu-link"><a href="">Contacts</a></li>
             </ul>
         </nav>
             <address class="header-list-contacts">
