--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </a>
 
             <ul class="header-list">
-                <li class="header-list-item"><a href="header-menu-link">Studio</a></li>
-                <li class="header-list-item"><a href="header-menu-link">Portfolio</a></li>
-                <li class="header-list-item"><a href="header-menu-link">Contacts</a></li>
+                <li class="header-list-item"><a href="">Studio</a></li>
+                <li class="header-list-item"><a href="">Portfolio</a></li>
+                <li class="header-list-item"><a href="">Contacts</a></li>
             </ul>
         </nav>
             <address class="header-list-contacts">
@@ -127,71 +127,71 @@
     <!-- Section four -->
     <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
-            <ul>
-                <li>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
                     <img 
                     src="images/banking-app.jpg" 
                     alt="Banking App"
                     width="360"
                     height="300"
                     >
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-subtitle">Banking App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
 
-                <li>
+                <li class="portfolio-item">
                     <img 
                     src="images/cashless-payment.jpg" 
                     alt="Cashless Payment"
                     width="360"
                     height="300"
                     >
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
 
-                <li>
+                <li class="portfolio-item">
                     <img 
                     src="images/meditation-app.jpg" 
                     alt="Meditation App"
                     width="360"
                     height="300"
                     >
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-subtitle">Meditation App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
 
-                <li>
+                <li class="portfolio-item">
                     <img 
                     src="images/taxi-service.jpg" 
                     alt="Taxi Service"
                     width="360"
                     height="300"
                     >
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-subtitle">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
 
-                <li>
+                <li class="portfolio-item">
                     <img 
                     src="images/screen-illustrations.jpg" 
                     alt="Screen Illustrations"
                     width="360"
                     height="300"
                     >
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
                 </li>
 
-                <li>
+                <li class="portfolio-item">
                     <img 
                     src="images/online-courses.jpg" 
                     alt="Online Courses"
                     width="360"
                     height="300"
                     >
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-subtitle">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
     </section>
