--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <ul class="portfolio-list">
                 <li class="portfolio-item">
                     <img 
-                    src="images/banking-app.jpg" 
+                    src="./images/banking-app.jpg" 
                     alt="Banking App"
                     width="360"
                     height="300"
@@ -141,7 +141,7 @@
 
                 <li class="portfolio-item">
                     <img 
-                    src="images/cashless-payment.jpg" 
+                    src="./images/cashless-payment.jpg" 
                     alt="Cashless Payment"
                     width="360"
                     height="300"
@@ -152,7 +152,7 @@
 
                 <li class="portfolio-item">
                     <img 
-                    src="images/meditation-app.jpg" 
+                    src="./images/meditation-app.jpg" 
                     alt="Meditation App"
                     width="360"
                     height="300"
@@ -163,7 +163,7 @@
 
                 <li class="portfolio-item">
                     <img 
-                    src="images/taxi-service.jpg" 
+                    src="./images/taxi-service.jpg" 
                     alt="Taxi Service"
                     width="360"
                     height="300"
@@ -174,7 +174,7 @@
 
                 <li class="portfolio-item">
                     <img 
-                    src="images/screen-illustrations.jpg" 
+                    src="./images/screen-illustrations.jpg" 
                     alt="Screen Illustrations"
                     width="360"
                     height="300"
@@ -185,7 +185,7 @@
 
                 <li class="portfolio-item">
                     <img 
-                    src="images/online-courses.jpg" 
+                    src="./images/online-courses.jpg" 
                     alt="Online Courses"
                     width="360"
                     height="300"
