--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 
         <nav class="header-nav">
-            <a href="./index.html" class="header-list-item">Web<span class="header-text">Studio</span>
+            <a href="./index.html" class="header-menu-link">Web<span class="header-text">Studio</span>
 
             </a>
 
