--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
 
         <nav class="header-nav">
-            <a href="./index.html" class="header-menu-link">Web<span class="header-text">Studio</span>
+            <ul>
+                <li class="logo-link"><a href="./index.html" class="header-menu-link">Web<span class="header-text">Studio</span></li>
+            </ul>
 
             </a>
 
