--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <nav class="header-nav">
             <ul>
-                <li class="logo-link"><a href="./index.html" class="header-menu-link">Web<span class="header-text">Studio</span></li>
+                <li class="logo-link"><a href="./index.html" class="header-menu-link">Web<span class="header-span">Studio</span></li>
             </ul>
 
             </a>
