--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <header>
 
         <nav class="header-nav">
-            <ul>
-                <li class="logo-link"><a href="./index.html" class="header-menu-link">Web<span class="header-span">Studio</span></li>
-            </ul>
+            
+            <a href="./index.html" class="header-menu-link">Web<span class="header-span">Studio</span></li>
 
             </a>
 
