--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
 
         <nav class="header-nav">
-            
-            <a href="./index.html" class="header-menu-link">Web<span class="header-span">Studio</span></li>
+
+            <a href="./index.html" class="header-menu-link">Web<span class="header-span">Studio</span>
 
             </a>
 
