--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </a>
 
             <ul class="header-list">
-                <li class="header-list-item"><a href="">Studio</a></li>
-                <li class="header-list-item"><a href="">Portfolio</a></li>
-                <li class="header-list-item"><a href="">Contacts</a></li>
+                <li class="header-list-item"><a href="./index.html" class="index">Studio</a></li>
+                <li class="header-list-item"><a href="./index.html" class="index">Portfolio</a></li>
+                <li class="header-list-item"><a href="./index.html" class="index">Contacts</a></li>
             </ul>
         </nav>
             <address class="header-list-contacts">
