--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
             <ul class="header-list">
                 <li class="header-list-item"><a href="./index.html" class="index">Studio</a></li>
-                <li class="header-list-item"><a href="">Portfolio</a></li>
-                <li class="header-list-item"><a href="">Contacts</a></li>
+                <li class="header-list-item"><a href="./index.html">Portfolio</a></li>
+                <li class="header-list-item"><a href="./index.html">Contacts</a></li>
             </ul>
         </nav>
             <address class="header-list-contacts">
