--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <address class="header-list-contacts">
             <ul>
                 <li class="header-address">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
                 </li>
                 <li class="header-address">
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
                 </li>
             </ul>
             </address>
